# ispc-mark

./: .gitmodules  CMakeLists.txt  README.md
src/: benchmark.cpp  src.cpp  src.ispc
